--- a/fiber-landing-page/package.json
+++ b/fiber-landing-page/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.142.0",
     "framer-motion": "^6.5.1",
+    "framer-motion-3d": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
