--- a/fiber-landing-page/package.json
+++ b/fiber-landing-page/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/animated": "^9.5.2",
+    "@react-spring/core": "^9.5.2",
+    "@react-spring/shared": "^9.5.2",
     "@react-three/drei": "^9.17.1",
     "@react-three/fiber": "^8.2.0",
     "@react-three/postprocessing": "^2.5.0",
@@ -14,7 +17,9 @@
     "framer-motion-3d": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.2",
     "three": "^0.142.0",
     "web-vitals": "^2.1.4"
   },
